filter-only when page loaded @everywhere

--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -18,7 +18,7 @@
 
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2" style="margin-bottom: 15px;">
-                        <input type="text" class="form-control" id="basic-url" name="word-search" value="{{wordsearch}}" placeholder="Search" aria-describedby="basic-addon3"></input>
+                        <input type="text" class="form-control" id="basic-url" name="word-search" placeholder="Search" aria-describedby="basic-addon3"></input>
                     </div>
                 </div>
                 <div class="row">
@@ -27,15 +27,15 @@
                             <div class="col-sm-6" style="margin-bottom: 15px;">
                                 <div class="input-group">
                                     <span class="input-group-addon">Range:</span>
-                                    <input type="text" class="form-control" id="range" name="range" value="{{range}}" aria-describedby="basic-addon3" maxlength="5"></input>
+                                    <input type="text" class="form-control" id="range" value="{{range}}" name="range" aria-describedby="basic-addon3" maxlength="5"></input>
                                     <span class="input-group-addon">km</span>
                                 </div>
                             </div>
                             <div class="col-sm-6" style="margin-bottom: 15px;">
-                                <select style="width: 100%" title="{{cards_per_page}}" name="cards_per_page" id="cards_per_page">
-                                    <option {% if 10 == cards_per_page %}selected{% endif %} value=10>10 information per page</option>
-                                    <option {% if 25 == cards_per_page %}selected{% endif %} value=25>25 information per page</option>
-                                    <option {% if 100 == cards_per_page %}selected{% endif %} value=100>100 information per page</option>
+                                <select style="width: 100%" name="cards_per_page" id="cards_per_page">
+                                    <option selected value=10>10 information per page</option>
+                                    <option value=25>25 information per page</option>
+                                    <option value=100>100 information per page</option>
                                 </select>
                             </div>
                         </div>
@@ -49,183 +49,13 @@
                         <input type="button" class="btn btn-block btn-lg btn-primary standard-grey-button-bold" onclick="location.href='{% url 'basics:information_all' %}'" value="Clear Filter"/>
                     </div>
                     <div class="col-sm-3 col-sm-offset-2" style="margin-top: 5px;">
-                        <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Filter"/>
+                        <input id="standard-grey-button-bold" type="button" class="btn btn-block btn-lg btn-primary" onclick="filter()" value="Filter"/>
                     </div>
                 </div>
 
             </form>
         </div>
         <div id="insert">
-        <div class="modal-body" style="padding-bottom: 0px;" id="modal-body">
-            <div class="list-group" style="margin-bottom: 0px;" id="info-list">
-                {% if infos %}
-                    {% for info in infos %}
-
-                        <!-- list all information -->
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <a class="list-group-item" id="standard-list-group-item-div" href="{% url 'basics:information_view' pk=info.id %}">
-                                    <div class="row">
-                                        <div class="col-sm-12" data-toggle="modal" data-target=".{{ info.id }}">
-                                            <h4 class="list-group-item-heading">{{ info.headline }}<div style="float: right;"><span class="glyphicon glyphicon-chevron-up"></span>{{ info.number_likes }}</div></h4>
-                                            <p class="list-group-item-text" style="word-wrap: break-word;">{{ info|get_short_text:160 }}</p>
-                                        </div>
-                                        <div class="col-sm-9" data-toggle="modal" data-target=".{{ info.id }}">
-                                            <h6><br><i>from {{ info.date }}{% if info.author_is_admin %} by <span style="color: #D36E5A;">Admin</span>{% elif info.group %} by <span style="color: #70962c;">{{ info.group.name }}</span>{% elif info.author == user %} by <span>you</span>{% endif %}</i></h6>
-                                        </div>
-                                    </div>
-                                </a>
-
-                                <div class="list-group-footer" style="margin-bottom: 15px;">
-                                    {% if user == info.author %}
-                                        <div class="row">
-                                            <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                <div class="col-sm-12">
-                                                    <span class="glyphicon glyphicon-comment"></span> Comment
-                                                </div>
-                                            </a>
-                                        </div>
-                                    {% else %}
-                                        {% if not user.userdata in info.reported_by.all and not user.userdata in info.liked_by.all %}
-                                            <div class="row">
-                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="like{{info.pk}}" onclick="like({{info.pk}})">
-                                                    <div class="col-sm-3" id="list-group-footer-button-margin">
-                                                        <span class="glyphicon glyphicon-chevron-up"></span> Upvote
-                                                    </div>
-                                                </a>
-                                                {% if user.userdata in info.followed_by.all %}
-                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
-                                                        <div class="col-sm-3" id="list-group-footer-button-margin">
-                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
-                                                        </div>
-                                                    </a>
-                                                {% elif not user.userdata in info.followed_by.all%}
-                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
-                                                        <div class="col-sm-3" id="list-group-footer-button-margin">
-                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
-                                                        </div>
-                                                    </a>
-                                                {% endif %}
-                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                    <div class="col-sm-3" id="list-group-footer-button-margin">
-                                                        <span class="glyphicon glyphicon-comment"></span> Comment
-                                                    </div>
-                                                </a>
-                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{info.pk}}" onclick="report({{info.pk}})">
-                                                    <div class="col-sm-3">
-                                                        <span class="glyphicon glyphicon-ban-circle"></span> Report
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        {% elif not user.userdata in info.reported_by.all and user.userdata in info.liked_by.all  %}
-                                            <div class="row">
-                                                {% if user.userdata in info.followed_by.all %}
-                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
-                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
-                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
-                                                        </div>
-                                                    </a>
-                                                {% elif not user.userdata in info.followed_by.all%}
-                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
-                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
-                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
-                                                        </div>
-                                                    </a>
-                                                {% endif %}
-                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                    <div class="col-sm-4" id="list-group-footer-button-margin">
-                                                        <span class="glyphicon glyphicon-comment"></span> Comment
-                                                    </div>
-                                                </a>
-                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{info.pk}}" onclick="report({{info.pk}})">
-                                                    <div class="col-sm-4">
-                                                        <span class="glyphicon glyphicon-ban-circle"></span> Report
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        {% elif user.userdata in info.reported_by.all and not user.userdata in info.liked_by.all  %}
-                                            <div class="row">
-                                                <a class="list-group-footer-button" type="button" style="cursor:pointer" id="like{{info.pk}}" onclick="like({{info.pk}})">
-                                                    <div class="col-sm-4" id="list-group-footer-button-margin">
-                                                        <span class="glyphicon glyphicon-chevron-up"></span> Upvote
-                                                    </div>
-                                                </a>
-                                                {% if user.userdata in info.followed_by.all %}
-                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
-                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
-                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
-                                                        </div>
-                                                    </a>
-                                                {% elif not user.userdata in info.followed_by.all%}
-                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
-                                                        <div class="col-sm-4" id="list-group-footer-button-margin">
-                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
-                                                        </div>
-                                                    </a>
-                                                {% endif %}
-                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                    <div class="col-sm-4">
-                                                        <span class="glyphicon glyphicon-comment"></span> Comment
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        {% elif user.userdata in info.reported_by.all and user.userdata in info.liked_by.all %}
-                                            <div class="row">
-                                                {% if user.userdata in info.followed_by.all %}
-                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="unfollow{{info.pk}}" onclick="unfollow({{info.pk}})">
-                                                        <div class="col-sm-6" id="list-group-footer-button-margin">
-                                                            <span class="glyphicon glyphicon-bookmark"></span> Unfollow
-                                                        </div>
-                                                    </a>
-                                                {% elif not user.userdata in info.followed_by.all%}
-                                                    <a class="list-group-footer-button" type="button" style="cursor:pointer" id="follow{{info.pk}}" onclick="follow({{info.pk}})">
-                                                        <div class="col-sm-6" id="list-group-footer-button-margin">
-                                                            <span class="glyphicon glyphicon-bookmark"></span> Follow
-                                                        </div>
-                                                    </a>
-                                                {% endif %}
-                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_view' pk=info.id %}">
-                                                    <div class="col-sm-6">
-                                                        <span class="glyphicon glyphicon-comment"></span> Comment
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        {% endif %}
-                                    {% endif %}
-                                </div>
-
-                            </div>
-                        </div>
-
-                    {% empty %}
-                        <h4>There are no information.</h4>
-                    {% endfor %}
-                {% endif %}
-            </div>
-        </div>
-        <div class="modal-footer">
-            <div class="row">
-                <div class="col-xs-12 col-sm-offset-2 col-sm-8 text-center">
-                    <nav>
-                        <ul class="pagination">
-                            <li style="cursor:pointer" {% if 1 == page %}class="disabled"{% endif %}><a id="pagination-left-right" value="{{number}}" onclick="submit_page(this)" aria-label="Previous"><span aria-hidden="true" class="glyphicon glyphicon-menu-left"></span></a></li>
-                            {% for number in page_range %}
-                                {% if number == page %}
-                                    <li class="active"><a id="pagination-number-active" onclick="submit_page(this)" value="{{number}}">{{number}} <span class="sr-only">(current)</span></a></li>
-                                {% else %}
-                                    <li><a id="pagination-number" onclick="submit_page(this)" style="cursor:pointer" value="{{number}}">{{number}}</a></li>
-                                {% endif %}
-                            {% endfor %}
-                            <li>
-                                <a id="pagination-left-right" style="cursor:pointer" onclick="submit_page(this)" value="{{number}}" aria-label="Next">
-                                    <span aria-hidden="true" class="glyphicon glyphicon-menu-right"></span>
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </div>
         </div> <!--insert-->
     </div>
 </div><!-- end Information -->
@@ -236,14 +66,6 @@
     </div>
 </div>
 
-<script>
-    function submit_page(button){
-      var button = $(button).attr("value");
-      $("#page").val(button);
-      console.log($(button).attr("value"));
-      $("#filter-form").submit();
-    }
-  </script>
 
 <script>
 
@@ -278,19 +100,27 @@
 </script>
 
 <script>
+
+function submit_page(button){
+  var button = $(button).attr("value");
+  $("#page").val(button);
+  console.log($(button).attr("value"));
+  filter();
+}
+$(document).ready(filter);
+
+function filter(){
+
   $.ajaxSetup({
       data: {csrfmiddlewaretoken: '{{ csrf_token }}' },
   });
-  $('#filter-form').on('submit', function(e) {
-    e.preventDefault();
-    console.log("form submitted!");
     $.ajax({
       url: "filter/",
       type: "POST",
       data: {page: $("#page").val(), range: $("#range").val(), cards_per_page: $("#cards_per_page").val(), wordsearch: $("#basic-url").val()},
 
       beforeSend: function() {
-        $('#modal-body').html("<div class='modal-body' style='padding-bottom: 0px;'' id='loader'><center><img src='{% static 'basics/images/loader.gif' %}'/></center></div><br>");
+        $('#insert').html("<div class='modal-body' style='padding-bottom: 0px;'' id='loader'><center><img src='{% static 'basics/images/loader.gif' %}'/></center></div><br>");
       },
 
       success: function(data){
@@ -302,7 +132,7 @@
         console.log(xhr.status + ": " + xhr.responseText);
       }
     });
-  });
+}
 
 </script>
 
