--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -33,7 +33,7 @@
                             <div class="col-sm-6" style="margin-bottom: 15px;">
                                 <div class="input-group">
                                     <span class="input-group-addon">Range:</span>
-                                    <input type="text" class="form-control" id="range" name="range" value="{{range}}" aria-describedby="basic-addon3" maxlength="5"></input>
+                                    <input type="text" class="form-control" id="range" name="range" value="{{range}}" aria-describedby="basic-addon3" maxlength="5" pattern="\d*"></input>
                                     <span class="input-group-addon">km</span>
                                 </div>
                             </div>
@@ -119,6 +119,8 @@
     }
 $(document).ready(filter);
 function filter(){
+  if(document.getElementById("range").value != "" && document.getElementById("range").value.match(/^[0-9]+$/)) {
+
       $.ajax({
       url: "filter/",
       type: "POST",
@@ -138,6 +140,8 @@ function filter(){
         console.log(xhr.status + ": " + xhr.responseText);
       }
     });
+  }
+  else{$("#range").notify("Please enter a valid range.",{className: "error", position: "top-left"})}
 }
 
 function report(pk){
