--- a/basics/templates/basics/aboutus.html
+++ b/basics/templates/basics/aboutus.html
@@ -1,6 +1,6 @@
 {% extends 'basics/base.html' %}
 {% block content %}
-
+{% load staticfiles %}
 <div id="standard-modal">
 	<div class="modal-content">
 		<div class="modal-header">
@@ -13,49 +13,49 @@
             <h3>Our Team:</h3>
             <div class="row">
                 <div class="col-sm-4 text-center" style="height: 300px;">
-                    <img class="img-circle" width="200" height="200" src="http://memesvault.com/wp-content/uploads/Best-Meme-Faces-14.png" alt="image of Sean McLeish">
+                    <img class="img-circle" id="brand-image" src={% static 'basics/images/Sean.png' %} alt="image of Sean McLeish" />
                     <h3>Sean McLeish
                         <br><small>Product Owner</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center" style="height: 300px;">
-                    <img class="img-circle" width="200" height="200" src="http://i2.kym-cdn.com/photos/images/facebook/000/232/114/e39.png" alt="image of Phillip Fiala">
+                    <img class="img-circle" id="brand-image" src={% static 'basics/images/Phillip.png' %} alt="image of Phillip Fiala" />
                     <h3>Phillip Fiala
                         <br><small>Scrum Master</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center" style="height: 300px;">
-                    <img class="img-circle" width="200" height="200" src="https://s-media-cache-ak0.pinimg.com/736x/9b/03/78/9b037851285c9a783b5896392e397321.jpg" alt="image of Paul David Beck">
+                    <img class="img-circle" id="brand-image" src={% static 'basics/images/Paul.jpg' %} alt="image of Paul Beck" />
                     <h3>Paul David Beck
                         <br><small>Co-Scrum Master</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center" style="height: 300px;">
-                    <img class="img-circle" width="200" height="200" src="http://i1.kym-cdn.com/entries/icons/original/000/005/742/sweetjesus.jpg" alt="image of Thomas Dittrich-Salamon">
+                    <img class="img-circle" id="brand-image" src={% static 'basics/images/Thomas.jpg' %} alt="image of Thomas Dittrich-Salamon" />
                     <h3>Thomas Dittrich-Salamon
                         <br><small>Technology</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center" style="height: 300px;">
-                    <img class="img-circle" width= "200" height="200" src="http://memesvault.com/wp-content/uploads/Angry-Girl-Meme-Face-06.jpg" alt="image of Sandrine Witt">
+                    <img class="img-circle" id="brand-image" src={% static 'basics/images/Sandrine.jpg' %} alt="image of Sandrine Witt" />
                     <h3>Sandrine Witt
                         <br><small>Team Member</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center" style="height: 300px;">
-                    <img class="img-circle" width="200" height="200" src="https://s-media-cache-ak0.pinimg.com/736x/49/47/e4/4947e4530d3ceb72fb163c59bbc626af.jpg" alt="image of Johannes-Paul Winkler">
+                    <img class="img-circle" id="brand-image" src={% static 'basics/images/Johannes.jpg' %} alt="image of Johannes-Paul Winkler" />
                     <h3>Johannes-Paul Winkler
                         <br><small>Team Member</small>
                     </h3>
                 </div>
                 <div class="col-sm-6 text-center" style="height: 300px;">
-                    <img class="img-circle" width="200" height="200" src="http://memesvault.com/wp-content/uploads/Happy-Meme-Faces-Transparent-28.png" alt="image of Deniz Riedel">
+                    <img class="img-circle" id="brand-image" src={% static 'basics/images/Deniz.png' %} alt="image of Deniz Riedel" />
                     <h3>Deniz Riedel
                         <br><small>Team Member</small>
                     </h3>
                 </div>
                 <div class="col-sm-6 text-center" style="height: 300px;">
-                    <img class="img-circle" width="200" height="200" src="https://s-media-cache-ak0.pinimg.com/736x/36/ae/5a/36ae5aadd62b9ba1767b5dedd50c099c.jpg" alt="image of Victor Rathke">
+                    <img class="img-circle" id="brand-image" src={% static 'basics/images/Victor.jpg' %} alt="image of Victor Rathke" />
                     <h3>Victor Rathke
                         <br><small>Team Member</small>
                     </h3>
