getting some commits by fixing some litte things

--- a/basics/templates/basics/faq_signin.html
+++ b/basics/templates/basics/faq_signin.html
@@ -179,7 +179,7 @@
                 <div class="panel panel-default" id="inner-panel">
                     <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" id="cursor-pointer">
                         <h4 class="panel-title">
-                            <h4>How can I sumit a new Need?</h4>
+                            <h4>How can I submit a new Need?</h4>
                         </h4>
                     </div>
                     <div id="collapseThree" class="panel-collapse collapse">
