--- a/basics/templates/snippets/info_filter.html
+++ b/basics/templates/snippets/info_filter.html
@@ -151,7 +151,11 @@
                 <div class="col-xs-12 col-sm-offset-2 col-sm-8 text-center">
                     <nav>
                         <ul class="pagination">
-                            <li style="cursor:pointer" {% if 1 == page %}class="disabled"{% endif %}><a id="pagination-left-right" value="{{number}}" onclick="submit_page(this)" aria-label="Previous"><span aria-hidden="true" class="glyphicon glyphicon-menu-left"></span></a></li>
+                            <li style="cursor:pointer" {% if 1 == page %}class="disabled"{% endif %}>
+                                <a id="pagination-left-right" value='{{page|add:"-1"}}' {% if 1 != page %}onclick="submit_page(this)"{% endif %} aria-label="Previous">
+                                    <span aria-hidden="true" class="glyphicon glyphicon-menu-left"></span>
+                                </a>
+                            </li>
                             {% for number in page_range %}
                                 {% if number == page %}
                                     <li class="active"><a id="pagination-number-active" onclick="submit_page(this)" value="{{number}}">{{number}} <span class="sr-only">(current)</span></a></li>
@@ -159,8 +163,9 @@
                                     <li><a id="pagination-number" onclick="submit_page(this)" style="cursor:pointer" value="{{number}}">{{number}}</a></li>
                                 {% endif %}
                             {% endfor %}
-                            <li>
-                                <a id="pagination-left-right" style="cursor:pointer" onclick="submit_page(this)" value="{{number}}" aria-label="Next">
+                            
+                            <li style="cursor:pointer" {% if size != cards_per_page %}class="disabled"{% endif %}>
+                                <a id="pagination-left-right" value='{{page|add:"1"}}' {% if size == cards_per_page %} onclick="submit_page(this)" {% endif %} aria-label="Next">
                                     <span aria-hidden="true" class="glyphicon glyphicon-menu-right"></span>
                                 </a>
                             </li>
