fix scrollbar in claims

--- a/basics/templates/basics/map_claim.html
+++ b/basics/templates/basics/map_claim.html
@@ -151,7 +151,7 @@
                     <div class="col-sm-12">
                         <div class="col-sm-12" id="outer-claim-scroll">
                             <h5 style="text-align: right;">Check your boxes and get your needs and informationen in those claims!</h5>
-                            <div style="max-height: 410px; overflow-y: scroll;">
+                            <div style="max-height: 410px; overflow-y:auto;">
                                 <div class="col-sm-12">
                                     <div class="list-group" id="poly-list">
                                         {% for poly in polyuser %}
