add tooltip script in home filter

--- a/basics/templates/snippets/home_filter.html
+++ b/basics/templates/snippets/home_filter.html
@@ -295,3 +295,9 @@
             {% else %}
                 <h4>You haven't performed any activities. If you need help click FAQ at the navigation bar.</h4>
             {% endif %}
+
+            <script>
+            $(document).ready(function(){
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+            </script>
