--- a/basics/templates/snippets/home_filter.html
+++ b/basics/templates/snippets/home_filter.html
@@ -254,7 +254,7 @@
                                                     <span class="glyphicon glyphicon-search"></span> Details
                                                 </div>
                                             </a>
-                                            <a class="list-group-footer-button" type="button" onclick="deletePrompt('comment', '{{elem.pk}}')" >
+                                            <a class="list-group-footer-button cursor-pointer" type="button" onclick="deletePrompt('comment', '{{elem.pk}}')" >
                                                 <div class="col-sm-6">
                                                     <span class="glyphicon glyphicon-remove"></span> Delete
                                                 </div>
