--- a/administration/templates/administration/categories.html
+++ b/administration/templates/administration/categories.html
@@ -148,7 +148,7 @@
                                             <p>{{ categorie.name }}</p>
                                         </div>
                                         <div class="col-sm-10">
-                                            <h6>Number of members: {{ categorie|filter_cats|length }}</h6>
+                                            <h6>Number of needs: {{ categorie|filter_cats|length }}</h6>
                                         </div>
                                         <div class="col-sm-2">
                                             <a id="standard-grey-button-light" class="btn btn-default btn-sml" onclick="deletePrompt('{{categorie.pk}}')" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
