refreshed information address

--- a/administration/templates/administration/information_admin.html
+++ b/administration/templates/administration/information_admin.html
@@ -184,7 +184,7 @@ function deletePrompt(conf,pk){
 
         map = new google.maps.Map(document.getElementById("map-container"),mapProp);
 
-        placeMarker(new google.maps.LatLng(parseFloat("{{ information.address.latitude }}".replace(",", ".")), parseFloat("{{ information.address.longditude }}".replace(",", "."))));
+        placeMarker(new google.maps.LatLng(parseFloat("{{ information.adrAsPoint.x }}".replace(",", ".")), parseFloat("{{ information.adrAsPoint.y }}".replace(",", "."))));
   }
 
   function placeMarker(location) {
