--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -79,7 +79,7 @@
 </div>
 
 <script>
-
+function initialisiere(){
     $(window).ready(function() {
         if($('.button-float').offset().top + 70 >= $('#footer').offset().top - 20){
             $('.button-float').css('position', 'absolute');
@@ -107,7 +107,7 @@
              $('.button-float').css('bottom', '20px');
          }
      });
-
+}
 </script>
 
 <script>
@@ -147,6 +147,7 @@ function filter(){
       success: function(data){
         $('#insert').html(data);
         console.log("success");
+        initialisiere();
       },
 
       error: function(xhr, errmsg, err){
