--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -256,7 +256,7 @@
                             </select>
                         </div>
                         <div  class="col-sm-2" style="margin-top: 15px; margin-bottom: 10px;">
-                            <input id="standard-grey-button-bold" onclick="filter()" class="btn btn-block btn-lg btn-primary" value="Filter"/>
+                            <input type="button" id="standard-grey-button-bold" onclick="filter()" class="btn btn-block btn-lg btn-primary" value="Filter"/>
                         </div>
                 {% endif %}
             </div>
