add overview user png

--- a/administration/templates/administration/faq_administration.html
+++ b/administration/templates/administration/faq_administration.html
@@ -222,7 +222,7 @@
                 <div class="panel-body">
                    <p> Administrators have the ability to see the list of users, as well as delete any users that have been reported. Administrators can also appoint new administrators. </p>
 		   <br>
-		   <img src={% static 'basics/images/overview_users.PNG' %} alt="" style="width:100%;">
+		   <img src={% static 'basics/images/overview_users.png' %} alt="" style="width:100%;">
                 </div>
             </div>
         </div>
