--- a/basics/templates/snippets/home_filter.html
+++ b/basics/templates/snippets/home_filter.html
@@ -147,7 +147,7 @@
                                     <div class="list-group-footer">
                                         <div class="row">
                                             {% if elem|get_room_helper_out_becuase_of_kick_or_leave:request.user %}
-                                                <a class="list-group-footer-button" type="button" href="">
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:chat_room' roomname=elem|get_roomname:request.user%}">
                                                     <div class="col-sm-12">
                                                         <span class="glyphicon glyphicon-comment"></span> Chat History
                                                     </div>
